cif/org.eclipse.escet.cif.tests/tests/event_based/conversion_tests/no_event_on_edge.run.err
ERROR: Failed to compute synchronous product for CIF file "event_based/conversion_tests/no_event_on_edge.cif".
CAUSE: CIF synchronous product tool failed due to unsatisfied preconditions:

  ---------------------------------------
  (1/1) Edge has an implicit 'tau' event.
  ---------------------------------------
   * In location "a.a":
     - edge when true;
       ^
